chore: update .gitignore for Python project
- Add Python cache files and bytecode
- Exclude database files and virtual environments
- Add IDE and OS specific files
- Include application-specific temporary directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
 .env
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.py[cod]
+*.class
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Virtual environment
+.venv/
+venv/
+env/
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+*.log
+
+# Environment variables
+.env
+.env.local
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Application specific
+uploads/
+reports/
+temp/
+
