feat: enhance dependencies and add generated demo output
- Update requirements.txt with core SyndicAgent dependencies
- Add version constraints for reliability and security
- Include testing dependencies for development workflow
- Add example PDF output from successful demo run

Provides clear dependency management and demonstrates
successful report generation capabilities.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+# Core SyndicAgent dependencies
+requests>=2.31.0
+redis>=5.0.0
+reportlab>=4.0.0
+python-dotenv>=1.0.0
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+
+# Original dependencies (if needed for full stack)
 fastapi
 uvicorn
 sqlalchemy
 psycopg2-binary
-python-dotenv
 celery
-redis
 APScheduler
 jinja2
 plotly
